# agentfoundry-planner

./: Dockerfile  Makefile  README.md  pyproject.toml
docs/: versioning.md
planner_service/: __init__.py  api.py  auth.py  context_driver.py  logging.py  models.py  plan_validator.py  prompt_engine.py
planner_service/resources/: mock_context.json
repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
tests/: __init__.py  test_app.py  test_context_driver.py  test_plan_endpoint.py  test_plan_validator.py  test_prompt_engine.py
